infrastructure/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rails-app-svc
  namespace: ror-app
spec:
  type: ClusterIP
  selector:
    app: rails-app
  ports:
    - name: http
      port: 80
      targetPort: 80
